fix: Prevent x-overflow on <TournamentsPage/> (#60)
Fixes #54

--- a/src/components/TournamentCard/TournamentCard.module.scss
+++ b/src/components/TournamentCard/TournamentCard.module.scss
@@ -29,6 +29,7 @@
     @include flex.row;
     @include borders.normal($side: bottom);
 
+    overflow: hidden;
     padding: 0.5rem 1rem;
 
     h2 {
